Fix white space issues between bio name, image and text

--- a/src/app/features/home/biographies/biographies.component.sass
+++ b/src/app/features/home/biographies/biographies.component.sass
@@ -11,12 +11,15 @@
   display: flex
   justify-content: center
   gap: 30px
-
-.biographies__biography-name
-  font-size: 30px
+  padding: 16px
 
 .biographies__biography-image
   height: 100%
   width: 340px
   object-fit: cover
 
+.biographies__biography-text
+  margin-top: 16px
+
+.biographies__biography-name
+  font-size: 30px
